--- a/styles.css
+++ b/styles.css
@@ -37,12 +37,12 @@ h1 {
 input[type="text"] {
     border: 2px solid black;
     padding: 8px;
-    font-size: 1rem;
+    font-size: 1.1rem;
     border-radius: 7px;
 }
 
 p {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: bolder;
     margin-top: 25px;
 }
@@ -62,4 +62,19 @@ input[type="button"]:hover {
     color: white;
     /* padding: 15px 25px; */
     font-size: 1rem;
+}
+
+@media only screen and (max-width: 480px) {
+    input[type="text"] {
+        border: 2px solid black;
+        padding: 5px;
+        font-size: 0.9rem;
+        border-radius: 7px;
+    }
+
+    p {
+        font-size: 2rem;
+        font-weight: bolder;
+        margin-top: 25px;
+    }
 }
